# toyvm

./: CMakeLists.txt  README.MD
asm/: assembler.py  disasm.py  instruction_encode.py  num_convert.py  operand_encode.py
examples/: fib_recursive.asm  fibonacci.asm  hello_world.prog  matrix.asm  popcount.asm
vm/: CMakeLists.txt  Debugger.cpp  Debugger.h  Instruction.cpp  Instruction.h  Operand.h  VM.cpp  VM.h  definitions.h  main.cpp
vm/include/: InputReader.h  Operand.h  OutputWriter.h  definitions.h  util.h
vm/src/: Debugger.cpp  VM.cpp  main.cpp  util.cpp
